--- a/package.json
+++ b/package.json
@@ -54,10 +54,15 @@
     "@loopback/openapi-v3": "^0.10.12",
     "@loopback/repository": "^0.12.1",
     "@loopback/rest": "^0.15.1",
+    "@types/bcrypt": "^2.0.0",
+    "@types/bcryptjs": "^2.4.1",
     "@types/jsonwebtoken": "^7.2.8",
+    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "db-migrate-mysql": "^1.1.10",
     "jsonwebtoken": "^8.3.0",
-    "loopback-connector-mysql": "^5.2.0"
+    "loopback-connector-mysql": "^5.2.0",
+    "stripe": "^6.2.1"
   },
   "devDependencies": {
     "@loopback/build": "^0.6.11",
