--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "test:dev": "lb-mocha --allow-console-logs DIST/test/**/*.js && npm run posttest",
     "prestart": "npm run build:current",
     "start": "node .",
-    "prepublishOnly": "npm run test",
-    "live": "db-migrate up && node ."
+    "prepublishOnly": "npm run test"
   },
   "repository": {
     "type": "git"
