--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "start": "node .",
     "prepublishOnly": "npm run test",
     "live": "db-migrate up && node .",
+    "ken": "NODE_ENV=dev && export DB_HOST=localhost && export DB_PORT=3306 && export DB_USER=root && export DB_PASSWORD= && export DB_DATABASE=uxperience && npm start",
     "erich": "export DB_HOST=localhost && export DB_PORT=3306 && export DB_USER=root && export DB_PASSWORD= && export DB_DATABASE=localhost-api && npm start",
     "miki": "export DB_HOST=ix-fs-1.ce5d5ftkvwyr.eu-west-1.rds.amazonaws.com && export DB_PORT=3306 && export DB_USER=ix_fs_1 && export DB_PASSWORD=ixperience2018 && export DB_DATABASE=localhost && npm start"
   },
